# anomyze

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  anomyze.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml
anomyze/: __init__.py  cli.py  config.py  core.py  entities.py  models.py  patterns.py
anomyze/api/: __init__.py  hardening.py  logging_config.py  main.py  metrics.py  models.py  routes.py
anomyze/audit/: __init__.py  logger.py
anomyze/benchmark/: __init__.py  __main__.py  evaluator.py  loader.py  metrics.py  regression_check.py  reporter.py
anomyze/channels/: __init__.py  base.py  govgpt.py  ifg.py  kapa.py
anomyze/config/: __init__.py  settings.py
anomyze/mappings/: __init__.py  mapping_store.py
anomyze/patterns/: __init__.py  addresses.py  art9.py  at_names.py  at_patterns.py  blacklist.py  company_context.py  dates.py  documents.py  email.py  financial.py  healthcare.py  names.py  phone.py  vehicles.py  whitelist.py
anomyze/pipeline/: __init__.py  context_layer.py  ensemble.py  entity_resolver.py  gliner_layer.py  model_integrity.py  ner_layer.py  normalizer.py  orchestrator.py  phonetic.py  presidio_compat_layer.py  quality_check.py  regex_layer.py  reidentification.py  utils.py
benchmarks/: README.md
benchmarks/datasets/: bka_ifg_simulation.json  realistic_at.json  smoke_at.json  synthetic_at.json
config/: model_hashes.json
deploy/: README.md
deploy/nginx/: anomyze.conf
deploy/oauth2-proxy/: config.cfg
deploy/scripts/: backup-audit.sh  restore-audit.sh
deploy/systemd/: anomyze-audit-backup.service  (+3 more)
docs/: PROJECT-TODO.md  api_reference.md  architecture.md  end-to-end-process.md  presentation-content.md  whitepaper-anomyze.md
scripts/: QUICK_REFERENCE.md  SAFE_PUSH_GUIDE.md  docker_smoke.sh  gen_model_manifest.py  prefetch_models.py  safe-push.sh
tests/: __init__.py  test_adversarial.py  test_api.py  test_api_hardening.py  test_api_logging.py  test_api_metrics.py  test_at_names.py  test_audit_retention.py  test_benchmark_datasets.py  test_benchmark_evaluator.py  test_benchmark_generator.py  test_benchmark_loader.py  test_benchmark_metrics.py  test_ensemble.py  test_entity_resolver.py  test_healthcare.py  test_integration.py  test_kapa_art9_optout.py  test_model_integrity.py  test_normalizer.py  test_patterns.py  test_phonetic.py  test_pipeline_unit.py  test_quality_check.py  test_recognizers.py  test_regex_layer.py  test_regression_check.py  test_reidentification.py  test_whitelist.py  test_whitelist_collisions.py
(+70 files in other folders)
