[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomyze"
version = "2.0.0"
description = "Souveräne KI-Anonymisierungsschicht für die österreichische Bundesverwaltung"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anomyze Team", email = "kontakt@anomyze.io" }
]
keywords = [
    "anonymization",
    "pii",
    "privacy",
    "german",
    "austrian",
    "nlp",
    "ner",
    "gdpr",
    "dsgvo",
    "public-ai",
    "govtech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Security",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "prompt-toolkit>=3.0.0",
    "python-stdnum>=1.20",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
observability = [
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]
hardening = [
    "slowapi>=0.1.9",
    "secure>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
anomyze = "anomyze.cli:main"

[project.urls]
Homepage = "https://anomyze.it"
Documentation = "https://github.com/slavkoklincov/anomyze"
Repository = "https://github.com/slavkoklincov/anomyze"
Issues = "https://github.com/slavkoklincov/anomyze/issues"

[tool.hatch.build.targets.wheel]
packages = ["anomyze"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=anomyze --cov-report=term-missing"
